background syntax change

--- a/background.html
+++ b/background.html
@@ -15,65 +15,65 @@
     <div class="container">
         <h1 class="text-center">BACKGROUND COLOR</h1>
 
-        <h3 class="bg-primary">
+        <p class="bg-primary">
             bg-primary
-        </h3>
+        </p>
 
-        <h3 class="bg-primary-subtle">
+        <p class="bg-primary-subtle">
             bg-primary-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-secondary">
+        <p class="bg-secondary">
             bg-secondary
-        </h3>
+        </p>
 
-        <h3 class="bg-secondary-subtle">
+        <p class="bg-secondary-subtle">
             bg-secondary-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-success">
+        <p class="bg-success">
             bg-success
-        </h3>
+        </p>
 
-        <h3 class="bg-success-subtle">
+        <p class="bg-success-subtle">
             bg-success-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-danger">
+        <p class="bg-danger">
             bg-danger
-        </h3>
+        </p>
 
-        <h3 class="bg-danger-subtle">
+        <p class="bg-danger-subtle">
             bg-danger-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-warning">
+        <p class="bg-warning">
             bg-warning
-        </h3>
+        </p>
 
-        <h3 class="bg-warning-subtle">
+        <p class="bg-warning-subtle">
             bg-warning-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-info">
+        <p class="bg-info">
             bg-info
-        </h3>
+        </p>
 
-        <h3 class="bg-info-subtle">
+        <p class="bg-info-subtle">
             bg-info-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-dark text-light">
+        <p class="bg-dark text-light">
             bg-dark
-        </h3>
+        </p>
 
-        <h3 class="bg-dark-subtle">
+        <p class="bg-dark-subtle">
             bg-dark-subtle
-        </h3>
+        </p>
 
-        <h3 class="bg-black text-light">
+        <p class="bg-black text-light">
             bg-black
-        </h3>
+        </p>
     </div>
 
     <!-- ****** BACKGROUND COLOR END ****** -->
