--- a/background.html
+++ b/background.html
@@ -18,66 +18,106 @@
         <p class="bg-primary">
             bg-primary
         </p>
-
         <p class="bg-primary-subtle">
             bg-primary-subtle
         </p>
-
         <p class="bg-secondary">
             bg-secondary
         </p>
-
         <p class="bg-secondary-subtle">
             bg-secondary-subtle
         </p>
-
         <p class="bg-success">
             bg-success
         </p>
-
         <p class="bg-success-subtle">
             bg-success-subtle
         </p>
-
         <p class="bg-danger">
             bg-danger
         </p>
-
         <p class="bg-danger-subtle">
             bg-danger-subtle
         </p>
-
         <p class="bg-warning">
             bg-warning
         </p>
-
         <p class="bg-warning-subtle">
             bg-warning-subtle
         </p>
-
         <p class="bg-info">
             bg-info
         </p>
-
         <p class="bg-info-subtle">
             bg-info-subtle
         </p>
-
         <p class="bg-dark text-light">
             bg-dark
         </p>
-
         <p class="bg-dark-subtle">
             bg-dark-subtle
         </p>
-
         <p class="bg-black text-light">
             bg-black
         </p>
     </div>
-
     <!-- ****** BACKGROUND COLOR END ****** -->
 
+    <!-- ****** BACKGROUND GRADIENT START ****** -->
+    <!-- (By adding a .bg-gradient class, a linear gradient is added as background image to the backgrounds. This gradient starts with a semi-transparent white which fades out to the bottom.) -->
+
+    <div class="container">
+        <h1 class="text-center">BACKGROUND GRADIENT</h1>
+
+        <P class="bg-primary bg-gradient">
+            bg-primary bg-gradient
+        </P>
+        <P class="bg-secondary bg-gradient">
+            bg-secondary bg-gradient
+        </P>
+        <P class="bg-success bg-gradient">
+            bg-success bg-gradient
+        </P>
+        <P class="bg-danger bg-gradient">
+            bg-danger bg-gradient
+        </P>
+        <P class="bg-warning bg-gradient">
+            bg-warning bg-gradient
+        </P>
+        <P class="bg-info bg-gradient">
+            bg-info bg-gradient
+        </P>
+        <P class="bg-dark bg-gradient text-light">
+            bg-dark bg-gradient
+        </P>
+        <P class="bg-black bg-gradient text-light">
+            bg-black bg-gradient
+        </P>
+    </div>
+    <!-- ****** BACKGROUND GRADIENT END ****** -->
+
+    <!-- ****** BACKGROUND COLOR OPACITY START ****** -->
+
+    <div class="container">
+        <h1 class="text-center">BACKGROUND COLOR OPACITY</h1>
+
+        <div class="bg-success p-2 text-white">
+            This is default success background
+        </div>
+        <div class="bg-success p-2 text-white bg-opacity-75">
+            This is 75% opacity success background
+        </div>
+        <div class="bg-success p-2 text-dark bg-opacity-50">
+            This is 50% opacity success background
+        </div>
+        <div class="bg-success p-2 text-dark bg-opacity-25">
+            This is 25% opacity success background
+        </div>
+        <div class="bg-success p-2 text-dark bg-opacity-10">
+            This is 10% opacity success background
+        </div>
+    </div>
+    <!-- ****** BACKGROUND COLOR OPACITY END ****** -->
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
