--- a/colors.html
+++ b/colors.html
@@ -10,22 +10,36 @@
 
 </head>
 <body>
+    <!-- (TEXT COLOR START) -->
+
     <h1 class="text-center">Text-Colors</h1>
-<div class="container">
-    <p class="text-primary">text-primary</p>
-    <p class="text-secondary">text-secondary</p>
-    <p class="text-success">text-success</p>
-    <p class="text-danger">text-danger</p>
-    <p class="text-danger-emphasis">text-danger-emphasis</p>
-    <p class="text-warning bg-dark">text-warning</p>
-    <p class="text-warning-emphasis">text-warning-emphasis</p>
-    <p class="text-info bg-dark">text-info</p>
-    <p class="text-body-tertiary">text-body-tertiary</p>
-    <p class="text-black">text-black</p>
-    <p class="text-white bg-dark">text-white</p>
-    <p class="text-black-50">text-black-50</p>
-    <p class="text-white-50">text-white-50</p>
-</div>
+    <div class="container">
+        <p class="text-primary">text-primary</p>
+        <p class="text-secondary">text-secondary</p>
+        <p class="text-success">text-success</p>
+        <p class="text-danger">text-danger</p>
+        <p class="text-danger-emphasis">text-danger-emphasis</p>
+        <p class="text-warning bg-dark">text-warning</p>
+        <p class="text-warning-emphasis">text-warning-emphasis</p>
+        <p class="text-info bg-dark">text-info</p>
+        <p class="text-body-tertiary">text-body-tertiary</p>
+        <p class="text-black">text-black</p>
+        <p class="text-white bg-dark">text-white</p>
+        <p class="text-black-50">text-black-50</p>
+        <p class="text-white-50">text-white-50</p>
+    </div>
+    <!-- (TEXT COLOR END) -->
+
+    <!-- (TEXT COLOR OPACITY START) -->
+
+    <h3 class="text-center">Text-Colors-Opacity</h3>
+    <div class="container">
+        <div class="text-primary">This is default primary text</div>
+        <div class="text-primary text-opacity-75">This is 75% opacity primary text</div>
+        <div class="text-primary text-opacity-50">This is 50% opacity primary text</div>
+        <div class="text-primary text-opacity-25">This is 25% opacity primary text</div>
+    </div>
+    <!-- (TEXT COLOR OPACITY END) -->
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
