--- a/border.html
+++ b/border.html
@@ -12,22 +12,36 @@
         div{
             height: 80px;
             width: 80px;
-            background-color: beige;
+            background-color: bisque;
             margin: 20px;
         }
     </style>
 </head>
 <body>
-    <!-- BORDER START -->
-    <!-- <div class="border"></div>
+    <!-- (BORDER (Additive) START) -->
+
+    <!-- <h1>Border (Additive)</h1>
+    <div class="border"></div>
     <div class="border-top"></div>
     <div class="border-bottom"></div>
     <div class="border-start"></div>
     <div class="border-end"></div> -->
-    <!-- BOARDER END -->
+    <!-- (BOARDER (Additive) END) -->
 
-    <!-- BORDER COLOR START -->
-    <!-- <div class="border border-primary"></div>
+    <!-- (BORDER (Subtractive) START) -->
+
+    <!-- <h1>Border (Subtractive)</h1>
+    <div class="border border-0"></div>
+    <div class="border border-top-0"></div>
+    <div class="border border-end-0"></div>
+    <div class="border border-bottom-0"></div>
+    <div class="border border-start-0"></div> -->
+    <!-- (BOARDER (Subtractive) END) -->
+
+    <!-- (BORDER COLOR START) -->
+
+    <!-- <h1>Border Color</h1>
+    <div class="border border-primary"></div>
     <div class="border border-primary-subtle"></div>
     <div class="border border-secondary"></div>
     <div class="border border-secondary-subtle"></div>
@@ -47,27 +61,39 @@
     <div class="border border-dark-subtle"></div>
     <div class="border border-black"></div>
     <div class="border border-white"></div> -->
-    <!-- BORDER COLOR END -->
+    <!-- (BORDER COLOR END) -->
 
-    <!-- BORDER WIDTH START -->
+    <!-- (BORDER OPACITY START (Stop external CSS)) -->
+
+    <!-- <div class="border border-success p-2 mb-2">This is default success border</div>
+    <div class="border border-success p-2 mb-2 border-opacity-75">This is 75% opacity success border</div>
+    <div class="border border-success p-2 mb-2 border-opacity-50">This is 50% opacity success border</div>
+    <div class="border border-success p-2 mb-2 border-opacity-25">This is 25% opacity success border</div>
+    <div class="border border-success p-2 border-opacity-10">This is 10% opacity success border</div> -->
+    <!-- (BORDER OPACITY END) -->
+
+    <!-- (BORDER WIDTH START) -->
+
     <!-- <div class="border border-1"></div>
     <div class="border border-2"></div>
     <div class="border border-3"></div>
     <div class="border border-4"></div>
     <div class="border border-5"></div> -->
-    <!-- BORDER WIDTH END -->
+    <!-- (BORDER WIDTH END) -->
 
-    <!-- BORDER RADIUS START -->
+    <!-- (BORDER RADIUS START) -->
+
     <!-- <div class="rounded"></div>
     <div class="rounded-top"></div>
     <div class="rounded-bottom"></div>
     <div class="rounded-start"></div>
     <div class="rounded-end"></div>
     <div class="rounded-circle"></div> -->
-    <!-- BORDER RADIUS END -->
+    <!-- (BORDER RADIUS END) -->
 
-    <!-- BORDER RADIUS SIZE -->
-    <!-- <div class="rounded-0"></div>
+    <!-- (BORDER RADIUS SIZE)) -->
+
+    <div class="rounded-0"></div>
     <div class="rounded-1"></div>
     <div class="rounded-2"></div>
     <div class="rounded-3"></div>
@@ -78,8 +104,8 @@
     <div class="rounded-start-2"></div>
     <div class="rounded-end-circle"></div>
     <div class="rounded-start-pill"></div>
-    <div class="rounded-5 rounded-top-0"></div> -->
-    <!-- BORDER RADIUS SIZE END -->
+    <div class="rounded-5 rounded-top-0"></div>
+    <!-- (BORDER RADIUS SIZE END) -->
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
