--- a/display.html
+++ b/display.html
@@ -23,17 +23,25 @@
           * inline-flex
     -->
     <!-- DISPLAY INLINE EXAMPLE -->
-    <div class="container border">
+    <div class="container mb-5">
         <h1>DISPLAY INLINE</h1>
-        <div class="d-inline text-bg-primary">d-inline</div>
-        <div class="d-inline text-bg-dark">d-inline</div>
+        <div class="d-inline p-2 text-bg-primary text-light">
+            d-inline
+        </div>
+        <div class="d-inline p-2 text-bg-dark text-light">
+            d-inline
+        </div>
     </div>
 
     <!-- DISPLAY BLOCK EXAMPLE -->
     <div class="container border">
         <h1>DISPLAY BLOCK</h1>
-        <div class="d-block text-bg-primary">d-inline</div>
-        <div class="d-block text-bg-dark">d-inline</div>
+        <span class="d-block p-2 text-bg-primary text-light">
+            d-block
+        </span>
+        <span class="d-block p-2 text-bg-dark text-light">
+            d-block
+        </span>
     </div>
 
 
