--- a/flex.html
+++ b/flex.html
@@ -9,6 +9,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+    <!-- (## FLEX BEHAVIORS ##) -->
+    <!-- (FLEXBOX CONTAINER) -->
+    <!-- <h3 class="text-center">FLEX</h3>
+    <div class="container">
+        <div class="d-flex bg-dark-subtle p-2">I'm a flexbox container!</div>
+    </div> -->
+
+    <!-- (# INLINE FLEXBOX CONTAINER #) -->
+    <!-- <h3 class="text-center">INLINE-FLEX</h3>
+    <div class="container">
+        <div class="d-inline-flex bg-success-subtle p-2">I'm an inline flexbox container!</div>
+    </div> -->
+
     <!-- Responsive variations also exist for .d-flex and .d-inline-flex.
          * d-flex
          * d-inline-flex
@@ -23,57 +36,53 @@
          * d-xxl-flex
          * d-xxl-inline-flex
         -->
-    <!-- FLEXBOX CONTAINER -->
-    <!-- <div class="container border">
-        <h3>FLEX</h3>
-        <div class="d-flex bg-dark-subtle">I'm a flexbox container!</div>
-    </div> -->
 
-    <!-- INLINE FLEXBOX CONTAINER -->
-    <!-- <div class="container border">
-        <h3>INLINE-FLEX</h3>
-        <div class="d-inline-flex bg-success-subtle">I'm an inline flexbox container!</div>
-    </div> -->
-
-    <!-- Responsive variations also exist for flex-direction.
+    <!-- (## FLEX-DIRECTION ##)
          * flex-row
          * flex-row-reverse
          * flex-column
          * flex-column-reverse
     -->
-    <!-- FLEX ROW & ROW-REVERSE EXAMPLE -->
+    <!-- ~FLEX ROW & ROW-REVERSE EXAMPLE~
+        (Use .flex-row to set a horizontal direction (the browser default),
+        or .flex-row-reverse to start the horizontal direction from the opposite side.)
+    -->
     <!-- <div class="container bg-danger-subtle">
         <div class="d-flex flex-row">
             <div class="p-2 m-2 bg-success-subtle">Flex item 1</div>
             <div class="p-2 m-2 bg-info-subtle">Flex item 2</div>
             <div class="p-2 m-2 bg-warning-subtle">Flex item 3</div>
-          </div>
-          <div class="d-flex flex-row-reverse">
+        </div>
+        <div class="d-flex flex-row-reverse">
             <div class="p-2 m-2 bg-success-subtle">Flex item 1</div>
             <div class="p-2 m-2 bg-info-subtle">Flex item 2</div>
             <div class="p-2 m-2 bg-warning-subtle">Flex item 3</div>
-          </div>
+        </div>
     </div> -->
 
-    <!-- FLEX-COLUMN & FLEX-COLUMN-REVERSE -->
-    <!-- <div class="container bg-danger-subtle">
+    <!-- ~FLEX-COLUMN & FLEX-COLUMN-REVERSE~
+        (Use .flex-column to set a vertical direction, or
+        .flex-column-reverse to start the vertical direction from the opposite side.)
+    -->
+    <!-- <div class="container bg-danger-subtle mb-5">
         <div class="d-flex flex-column">
             <div class="p-2 bg-success-subtle">Flex item 1</div>
             <div class="p-2 bg-info-subtle">Flex item 2</div>
             <div class="p-2 bg-warning-subtle">Flex item 3</div>
-          </div>
+        </div>
     </div>
-<br>
     <div class="container bg-danger-subtle">
-          <div class="d-flex flex-column-reverse">
+        <div class="d-flex flex-column-reverse">
             <div class="p-2 bg-success-subtle">Flex item 1</div>
             <div class="p-2 bg-info-subtle">Flex item 2</div>
             <div class="p-2 bg-warning-subtle">Flex item 3</div>
-          </div>
+        </div>
     </div> -->
 
-    <!-- JUSTIFY CONTENT
-         justify-content utilities on flexbox containers to change the alignment of flex items on the main axis (the x-axis to start, y-axis if flex-direction: column). Choose from start (browser default), end, center, between, around, or evenly.
+    <!-- (## JUSTIFY CONTENT ##)
+        (Use justify-content utilities on flexbox containers to change the alignment
+        of flex items on the main axis (the x-axis to start, y-axis if flex-direction: column).
+        Choose from start (browser default), end, center, between, around, or evenly.)
          * justify-content-start
          * justify-content-end
          * justify-content-center
@@ -123,15 +132,17 @@
         </div>
     </div> -->
 
-    <!-- ALIGN ITEMS
-         Use align-items utilities on flexbox containers to change the alignment of flex items on the cross axis (the y-axis to start, x-axis if flex-direction: column). Choose from start, end, center, baseline, or stretch (browser default).
+    <!-- (## ALIGN ITEMS ##)
+        (Use align-items utilities on flexbox containers to change the alignment
+        of flex items on the cross axis (the y-axis to start, x-axis if flex-direction: column).
+        Choose from start, end, center, baseline, or stretch (browser default).)
          * align-items-start
          * align-items-end
          * align-items-center
          * align-items-baseline
          * align-items-stretch
         -->
-    <!-- <div class="container">
+    <div class="container">
         <div class="bg-info m-2 align-items-start d-flex" style="height: 75px;">
             <div class="p-1 m-1 bg-dark-subtle">Flex</div>
             <div class="p-1 m-1 bg-dark-subtle">Items</div>
@@ -161,7 +172,7 @@
             <div class="p-1 m-1 bg-dark-subtle">Content</div>
             <div class="p-1 m-1 bg-dark-subtle">Around</div>
         </div>
-    </div> -->
+    </div>
 
     <!-- ALIGN SELF
          Use align-self utilities on flexbox items to individually change their alignment on the cross axis (the y-axis to start, x-axis if flex-direction: column). Choose from the same options as align-items: start, end, center, baseline, or stretch (browser default).
