position shadows sizing spacing text vertical update

--- a/position.html
+++ b/position.html
@@ -17,7 +17,10 @@
         * sticky
     -->
 
-    <!-- ARRANGE ELEMENTS
+    <!-- (## ARRANGE ELEMENTS ##)
+        (Arrange elements easily with the edge positioning utilities.
+        The format is {property}-{position}.)
+
         (property)
         * top - for the vertical top position
         * start - for the horizontal left position (in LTR)
@@ -30,19 +33,21 @@
         * 100 - for 100% edge position
     -->
 
-    <!-- <div class="container position-relative bg-secondary-subtle" style="height: 500px; width: 800px;">
+    <div class="container position-relative bg-secondary-subtle border border-black mt-5" style="height: 500px; width: 800px;">
         <div class="position-absolute top-0 start-0 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-0 end-0 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-50 start-50 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute bottom-50 end-50 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute bottom-0 start-0 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute bottom-0 end-0 bg-info" style="height: 40px; width: 40px;"></div>
-    </div> -->
+    </div>
 
-    <!-- CENTER ELEMENT
-        This class applies the transformations translateX(-50%) and translateY(-50%) to the element which, in combination with the edge positioning utilities, allows you to absolute center an element.
+    <!-- (## CENTER ELEMENT ##)
+        In addition, you can also center the elements with the transform utility class .translate-middle.
+        This class applies the transformations translateX(-50%) and translateY(-50%) to the element which,
+        in combination with the edge positioning utilities, allows you to absolute center an element.
     -->
-    <!-- <div class="container mt-4 position-relative bg-secondary-subtle" style="height: 500px; width: 800px;">
+    <div class="container mt-4 position-relative bg-secondary-subtle border border-black mt-5" style="height: 500px; width: 800px;">
         <div class="position-absolute top-0 start-0 translate-middle bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-0 start-50 translate-middle bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-0 start-100 translate-middle bg-info" style="height: 40px; width: 40px;"></div>
@@ -52,10 +57,11 @@
         <div class="position-absolute top-100 start-0 translate-middle bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-100 start-50 translate-middle bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-100 start-100 translate-middle bg bg-info" style="height: 40px; width: 40px;"></div>
-    </div> -->
+    </div>
 
-    <!-- (By adding .translate-middle-x or .translate-middle-y classes, elements can be positioned only in horizontal or vertical direction.) -->
-    <!-- <div class="container position-relative bg-secondary-subtle" style="height: 500px; width: 800px;">
+    <!-- (By adding .translate-middle-x or .translate-middle-y classes,
+        elements can be positioned only in horizontal or vertical direction.) -->
+    <div class="container position-relative bg-secondary-subtle border border-black mt-5 mb-5" style="height: 500px; width: 800px;">
         <div class="position-absolute top-0 start-0 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-0 start-50 translate-middle-x bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute top-0 end-0 bg-info" style="height: 40px; width: 40px;"></div>
@@ -65,7 +71,7 @@
         <div class="position-absolute bottom-0 start-0 bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute bottom-0 start-50 translate-middle-x bg-info" style="height: 40px; width: 40px;"></div>
         <div class="position-absolute bottom-0 end-0 bg-info" style="height: 40px; width: 40px;"></div>
-      </div> -->
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
