--- a/shadows.html
+++ b/shadows.html
@@ -9,10 +9,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <div class="shadow-none p-3 mb-5 bg-body-tertiary rounded">No shadow</div>
-    <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">Small shadow</div>
-    <div class="shadow p-3 mb-5 bg-body-tertiary rounded">Regular shadow</div>
-    <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">Larger shadow</div>
+    <div class="container border border-black mt-3">
+        <div class="shadow-none p-3 mb-5 bg-body-tertiary rounded">
+            No shadow
+        </div>
+        <div class="shadow-sm p-3 mb-5 bg-body-tertiary rounded">
+            Small shadow
+        </div>
+        <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
+            Regular shadow
+        </div>
+        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+            Larger shadow
+        </div>
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
