--- a/sizing.html
+++ b/sizing.html
@@ -9,22 +9,51 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <!-- SIZING
+    <!-- (## RELATIVE TO THE PARENT ##)
+        (Width and height utilities are generated from the utility API in _utilities.scss.
         Includes support for 25%, 50%, 75%, 100%, and auto by default.
+        Modify those values as you need to generate different utilities here.)
     -->
-    <!-- <div class="w-25 p-3 bg-success-subtle mb-1">Width 25%</div>
-    <div class="w-50 p-3 bg-success-subtle mb-1">Width 50%</div>
-    <div class="w-75 p-3 bg-success-subtle mb-1">Width 75%</div>
-    <div class="w-100 p-3 bg-success-subtle mb-1">Width 100%</div>
-    <div class="w-auto p-3 bg-success-subtle mb-1">Width auto</div> -->
+    <div class="container mt-3">
+        <div class="w-25 p-3 bg-success-subtle mb-1">
+            Width 25%
+        </div>
+        <div class="w-50 p-3 bg-success-subtle mb-1">
+            Width 50%
+        </div>
+        <div class="w-75 p-3 bg-success-subtle mb-1">
+            Width 75%
+        </div>
+        <div class="w-100 p-3 bg-success-subtle mb-1">
+            Width 100%
+        </div>
+        <div class="w-auto p-3 bg-success-subtle mb-1">
+            Width auto
+        </div>
+    </div>
 
-    <!-- <div style="height: 100px;">
-        <div class="h-25 d-inline-block bg-success-subtle" style="width: 120px;">Height 25%</div>
-        <div class="h-50 d-inline-block bg-success-subtle" style="width: 120px;">Height 50%</div>
-        <div class="h-75 d-inline-block bg-success-subtle" style="width: 120px;">Height 75%</div>
-        <div class="h-100 d-inline-block bg-success-subtle" style="width: 120px;">Height 100%</div>
-        <div class="h-auto d-inline-block bg-success-subtle" style="width: 120px;">Height auto</div>
-    </div> -->
+    <div class="container mt-3">
+        <div style="height: 100px;">
+            <div class="h-25 d-inline-block bg-info-subtle" style="width: 120px;">Height 25%</div>
+            <div class="h-50 d-inline-block bg-info-subtle" style="width: 120px;">Height 50%</div>
+            <div class="h-75 d-inline-block bg-info-subtle" style="width: 120px;">Height 75%</div>
+            <div class="h-100 d-inline-block bg-info-subtle" style="width: 120px;">Height 100%</div>
+            <div class="h-auto d-inline-block bg-info-subtle" style="width: 120px;">Height auto</div>
+        </div>
+    </div>
+
+    <!-- You can also use max-width: 100%; and max-height: 100%; utilities as needed. -->
+    <div class="container mt-3">
+        <div style="width: 50%; height: 100px; background-color: rgb(214, 141, 166);">
+            <div class="mw-100 bg-danger-subtle" style="width: 200%;">Max-width 100%</div>
+        </div>
+    </div>
+
+    <div class="container mt-3">
+        <div style="height: 100px; background-color: rgb(214, 141, 166)">
+            <div class="mh-100 bg-danger-subtle" style="width: 100px; height: 200px;">Max-height 100%</div>
+        </div>
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
