--- a/spacing.html
+++ b/spacing.html
@@ -12,6 +12,7 @@
     <!-- MARGIN & PADDING (Notation)
         * m - for classes that set margin
         * p - for classes that set padding
+
         (Where sides is one of)
         * t - for classes that set margin-top or padding-top
         * b - for classes that set margin-bottom or padding-bottom
@@ -20,13 +21,35 @@
         * x - for classes that set both *-left and *-right
         * y - for classes that set both *-top and *-bottom
         * blank - for classes that set a margin or padding on all 4 sides of the element
+
+        (Where size is one of)
+        * 0 - for classes that eliminate the margin or padding by setting it to 0
+        * 1 - (by default) for classes that set the margin or padding to $spacer * .25
+        * 2 - (by default) for classes that set the margin or padding to $spacer * .5
+        * 3 - (by default) for classes that set the margin or padding to $spacer
+        * 4 - (by default) for classes that set the margin or padding to $spacer * 1.5
+        * 5 - (by default) for classes that set the margin or padding to $spacer * 3
+        * auto - for classes that set the margin to auto
     -->
     <!-- HORIZONTAL CENTERING
-        Bootstrap also includes an .mx-auto class for horizontally centering fixed-width block level content—that is, content that has display: block and a width set—by setting the horizontal margins to auto.
+        (Bootstrap also includes an .mx-auto class for horizontally centering
+        fixed-width block level content—that is, content that has display: block
+        and a width set—by setting the horizontal margins to auto.)
     -->
-    <!-- <div class="bg-primary-subtle mx-auto p-2" style="width: 200px;">
-        Centered element
-    </div> -->
+    <div class="container border border-black mt-3">
+        <div class="mx-auto p-2 bg-info-subtle" style="width: 200px;">
+            Centered element
+        </div>
+    </div>
+
+    <!-- GAP
+        (When using display: grid or display: flex, you can make use of gap utilities on the parent element.
+        This can save on having to add margin utilities to individual children of a grid or flex container.
+        Gap utilities are responsive by default, and are generated via our utilities API, based on the $spacers Sass map.)
+
+        * row-gap
+        * column-gap
+    -->
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
