--- a/text.html
+++ b/text.html
@@ -9,54 +9,171 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <!-- TEXT ALIGNMENT -->
-    <!-- <p class="text-start">Start aligned text on all viewport sizes.</p>
-    <p class="text-center">Center aligned text on all viewport sizes.</p>
-    <p class="text-end">End aligned text on all viewport sizes.</p> -->
+    <!-- (## TEXT ALIGNMENT ##)
+        (Easily realign text to components with text alignment classes.
+        For start, end, and center alignment, responsive classes are available
+        that use the same viewport width breakpoints as the grid system.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="text-start">
+            Start aligned text on all viewport sizes.
+        </p>
+        <p class="text-center">
+            Center aligned text on all viewport sizes.
+        </p>
+        <p class="text-end">
+            End aligned text on all viewport sizes.
+        </p>
+    </div>
 
-    <!-- TEXT TRANSFORM -->
-    <!-- <p class="text-lowercase">Lowercased text.</p>
-    <p class="text-uppercase">Uppercased text.</p>
-    <p class="text-capitalize">CapiTaliZed text.</p> -->
+    <!-- (## TEXT WRAPPING & OVERFLOW ##)
+        (Wrap text with a .text-wrap class.)
+    -->
+    <div class="container border border-black mt-3">
+        <div class="badge bg-primary text-wrap" style="width: 6rem;">
+            This text should wrap.
+        </div>
+    </div>
 
-    <!-- FONT SIZE -->
-    <!-- <p class="fs-1">.fs-1 text</p>
-    <p class="fs-2">.fs-2 text</p>
-    <p class="fs-3">.fs-3 text</p>
-    <p class="fs-4">.fs-4 text</p>
-    <p class="fs-5">.fs-5 text</p>
-    <p class="fs-6">.fs-6 text</p> -->
+    <!-- (Prevent text from wrapping with a .text-nowrap class.) -->
+    <div class="container border border-black mt-3">
+        <div class="text-nowrap bg-body-secondary border" style="width: 8rem;">
+            This text should overflow the parent.
+        </div>
+    </div>
 
-    <!-- FONT WEIGHT & ITALICS -->
-    <!-- <p class="fw-bold">Bold text.</p>
-    <p class="fw-bolder">Bolder weight text (relative to the parent element).</p>
-    <p class="fw-semibold">Semibold weight text.</p>
-    <p class="fw-medium">Medium weight text.</p>
-    <p class="fw-normal">Normal weight text.</p>
-    <p class="fw-light">Light weight text.</p>
-    <p class="fw-lighter">Lighter weight text (relative to the parent element).</p>
-    <p class="fst-italic">Italic text.</p>
-    <p class="fst-normal">Text with normal font style</p> -->
+    <!-- (## TEXT TRANSFORM ##) -->
+    <!-- (Transform text in components with text capitalization classes) -->
+    <div class="container border border-black mt-3">
+        <p class="text-lowercase">
+            Lowercased text.
+        </p>
+        <p class="text-uppercase">
+            Uppercased text.
+        </p>
+        <p class="text-capitalize">
+            CapiTaliZed text.
+        </p>
+    </div>
 
-    <!-- LINE HEIGHT -->
-    <!-- <p class="lh-1">This is a long paragraph written to show how the line-height of an element is affected by our utilities. Classes are applied to the element itself or sometimes the parent element. These classes can be customized as needed with our utility API.</p>
-    <p class="lh-sm">This is a long paragraph written to show how the line-height of an element is affected by our utilities. Classes are applied to the element itself or sometimes the parent element. These classes can be customized as needed with our utility API.</p>
-    <p class="lh-base">This is a long paragraph written to show how the line-height of an element is affected by our utilities. Classes are applied to the element itself or sometimes the parent element. These classes can be customized as needed with our utility API.</p>
-    <p class="lh-lg">This is a long paragraph written to show how the line-height of an element is affected by our utilities. Classes are applied to the element itself or sometimes the parent element. These classes can be customized as needed with our utility API.</p> -->
+    <!-- FONT SIZE
+        (Quickly change the font-size of text. While our heading classes (e.g., .h1–.h6) apply font-size,
+        font-weight, and line-height, these utilities only apply font-size.
+        Sizing for these utilities matches HTML’s heading elements, so as the number increases, their size decreases.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="fs-1">
+            .fs-1 text
+        </p>
+        <p class="fs-2">
+            .fs-2 text
+        </p>
+        <p class="fs-3">
+            .fs-3 text
+        </p>
+        <p class="fs-4">
+            .fs-4 text
+        </p>
+        <p class="fs-5">
+            .fs-5 text
+        </p>
+        <p class="fs-6">
+            .fs-6 text
+        </p>
+    </div>
 
-    <!-- MONOSPACE -->
-    <!-- <p class="font-monospace">This is in monospace</p> -->
+    <!-- (## FONT WEIGHT & ITALICS ##)
+        (Quickly change the font-weight or font-style of text with these utilities.
+        font-style utilities are abbreviated as .fst-* and font-weight utilities are abbreviated as .fw-*.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="fw-bold">
+            Bold text.
+        </p>
+        <p class="fw-bolder">
+            Bolder weight text (relative to the parent element).
+        </p>
+        <p class="fw-semibold">
+            Semibold weight text.
+        </p>
+        <p class="fw-medium">
+            Medium weight text.
+        </p>
+        <p class="fw-normal">
+            Normal weight text.
+        </p>
+        <p class="fw-light">
+            Light weight text.
+        </p>
+        <p class="fw-lighter">
+            Lighter weight text (relative to the parent element).
+        </p>
+        <p class="fst-italic">
+            Italic text.
+        </p>
+        <p class="fst-normal">
+            Text with normal font style
+        </p>
+    </div>
 
-    <!-- REST COLOR -->
-    <!-- <p class="text-body-secondary">
-        Muted text with a <a href="#" class="text-reset">reset link</a>.
-        </p> -->
+    <!-- LINE HEIGHT
+        (Change the line height with .lh-* utilities.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="lh-1">
+            This is a long paragraph written to show how the line-height of an element is affected
+            by our utilities. Classes are applied to the element itself or sometimes the parent element.
+            These classes can be customized as needed with our utility API.
+        </p>
+        <p class="lh-sm">
+            This is a long paragraph written to show how the line-height of an element is
+            affected by our utilities. Classes are applied to the element itself or sometimes
+            the parent element. These classes can be customized as needed with our utility API.
+        </p>
+        <p class="lh-base">
+            This is a long paragraph written to show how the line-height of an element is affected
+            by our utilities. Classes are applied to the element itself or sometimes the parent element.
+            These classes can be customized as needed with our utility API.
+        </p>
+        <p class="lh-lg">This is a long paragraph written to show how the line-height of an element is
+            affected by our utilities. Classes are applied to the element itself or sometimes the parent element.
+            These classes can be customized as needed with our utility API.
+        </p>
+    </div>
 
-    <!-- TEXT DECORATION -->
-    <!-- <p class="text-decoration-underline">This text has a line underneath it.</p>
-    <p class="text-decoration-line-through">This text has a line going through it.</p>
-    <a href="#" class="text-decoration-none">This link has its text decoration removed</a> -->
-    
+    <!-- MONOSPACE
+        (Change a selection to our monospace font stack with .font-monospace.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="font-monospace">
+            This is in monospace
+        </p>
+    </div>
+
+    <!-- REST COLOR
+        (Reset a text or link’s color with .text-reset, so that it inherits the color from its parent.)
+    -->
+    <div class="container border border-black mt-3">
+        <p class="text-body-secondary">
+            Muted text with a <a href="#" class="text-reset">reset link</a>.
+        </p>
+    </div>
+
+    <!-- TEXT DECORATION
+        (Decorate text in components with text decoration classes.)
+    -->
+    <div class="container border border-black mt-3 mb-2">
+        <p class="text-decoration-underline">
+            This text has a line underneath it.
+        </p>
+        <p class="text-decoration-line-through">
+            This text has a line going through it.
+        </p>
+        <a href="#" class="text-decoration-none">
+            This link has its text decoration removed
+        </a>
+    </div>
+
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
