--- a/vertical-alignment.html
+++ b/vertical-alignment.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+  <!-- (Change the alignment of elements with the vertical-alignment utilities.
+    Please note that vertical-align only affects inline, inline-block, inline-table, and table cell elements) -->
     <!-- VERTICAL ALIGNMENT
         * align-baseline
         * align-top
@@ -17,26 +19,54 @@
         * align-text-bottom
         * align-text-top
     -->
-    <!-- <span class="align-baseline">baseline</span>
-    <span class="align-top">top</span>
-    <span class="align-middle">middle</span>
-    <span class="align-bottom">bottom</span>
-    <span class="align-text-top">text-top</span>
-    <span class="align-text-bottom">text-bottom</span> -->
+    <div class="container border border-black mt-2">
+      <span class="align-baseline">
+        baseline
+      </span>
+      <span class="align-top">
+        top
+      </span>
+      <span class="align-middle">
+        middle
+      </span>
+      <span class="align-bottom">
+        bottom
+      </span>
+      <span class="align-text-top">
+        text-top
+      </span>
+      <span class="align-text-bottom">
+        text-bottom
+      </span>
+    </div>
 
     <!-- (With table cells:) -->
-    <!-- <table style="height: 100px;">
+    <div class="container border border-black mt-2">
+      <table style="height: 100px;">
         <tbody>
           <tr>
-            <td class="align-baseline">baseline</td>
-            <td class="align-top">top</td>
-            <td class="align-middle">middle</td>
-            <td class="align-bottom">bottom</td>
-            <td class="align-text-top">text-top</td>
-            <td class="align-text-bottom">text-bottom</td>
+            <td class="align-baseline">
+              baseline
+            </td>
+            <td class="align-top">
+              top
+            </td>
+            <td class="align-middle">
+              middle
+            </td>
+            <td class="align-bottom">
+              bottom
+            </td>
+            <td class="align-text-top">
+              text-top
+            </td>
+            <td class="align-text-bottom">
+              text-bottom
+            </td>
           </tr>
         </tbody>
-      </table> -->
+      </table>
+    </div>
 
     <!-- JS LINK -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
