--- a/positon.html
+++ b/positon.html
@@ -14,7 +14,7 @@
          * Sticky
     -->
 
-    <!-- (## FIXED TOP ##
+    <!-- (## FIXED TOP ##)
         Position an element at the top of the viewport, from edge to edge.
         Be sure you understand the ramifications of fixed position in your project;
         you may need to add additional CSS.
